--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </a>
 
-      <a class="game-card game2" href="https://fukuyo-0sb9.onrender.com/" target="_blank">
+      <a class="game-card game2" href="https://shogi-8dbg.onrender.com" target="_blank">
         <div class="card-content">
           <h2>ブラジー将棋</h2>
           <p>時間無制限 チーム戦が可能な将棋です</p>
